# Thesis_tudatversion

./: CMakeLists.txt  README.txt  USMstateDerivativeModel.cpp  USMstateDerivativeModel.h  UserSettings.txt  body.h  constants.h  discreteForceModel.cpp  discreteForceModel.h  discreteForceModelGen.cpp  discreteForceModelGen.h  frameTransformation.cpp  frameTransformation.h  integrationSettings.cpp  integrationSettings.h  lagrangeInterpolator.cpp  lagrangeInterpolator.h  mainRKusm_tudatversion.cpp  mainTSI_tudatversion.cpp  problemRecurrenceRelations.cpp  problemRecurrenceRelations.h  problemRecurrenceRelationsGen.cpp  problemRecurrenceRelationsGen.h  recurrenceRelations.cpp  recurrenceRelations.h  spacecraft.cpp  spacecraft.h  spacecraftGen.cpp  spacecraftGen.h  stepSizeControlTSI.cpp  stepSizeControlTSI.h  taylorSeriesIntegrator.cpp  taylorSeriesIntegrator.h  taylorSeriesIntegratorGenMap.cpp  taylorSeriesIntegratorGenMap.h
CMakeModules/: FindJSONCPP.cmake  FindTudat.cmake
Output_tudatversion/: README.txt
unitTests/: CMakeLists.txt  crosstrackThrust.txt  crosstrackThrust10days.txt  nonconstantThrust10days.txt  nonconstantThrust10years.txt  nonconstantThrust5days.txt  outofplaneThrust.txt  outofplaneThrust10days.txt  tangentialThrust.txt  tangentialThrust10days.txt  thrustProfileExample.txt  unitTestFrameTransformation.cpp  unitTestLagrangeInterpolator.cpp  unitTestProblemRecurrenceRelations.cpp  unitTestRecurrenceRelations.cpp  unitTestStepSizeControlTSI.cpp  unitTestTaylorSeriesIntegrator.cpp  zeroThrust.txt  zeroThrust10days.txt  zeroThrust10years.txt  zeroThrust5days.txt
